First FrontEnd Developed. Functions and Buttons working

--- a/appsscript.json
+++ b/appsscript.json
@@ -5,5 +5,9 @@
   "runtimeVersion": "V8",
   "oauthScopes": [
     "https://www.googleapis.com/auth/script.external_request"
-  ]
+  ],
+  "webapp": {
+    "executeAs": "USER_DEPLOYING",
+    "access": "ANYONE_ANONYMOUS"
+  }
 }
